--- a/GameData/StockalikeHypergols/Patches/RCS.cfg
+++ b/GameData/StockalikeHypergols/Patches/RCS.cfg
@@ -1,6 +1,5 @@
-@PART[*]:HAS[@MODULE[ModuleRCSSwitch],MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSFX],MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
-	@description ^= :$: <br><color="green">RCS can accept other fuels.</color>
 	
 	IspVacHTP = 160
 	IspASLHTP = 120
@@ -84,7 +83,7 @@
 			}
 	  }
 }
-@PART[*]:HAS[@MODULE[ModuleRCSSwitch],!MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSFX],!MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
 	IspVac = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,0[1, ]$ // get vac Isp number
 	IspASL = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,1[1, ]$ // get ASL Isp number
@@ -106,6 +105,8 @@
 	IspASLHyper = 180
 	@IspVacHyper *= #$IspMult$
 	@IspASHyper *= #$IspMult$
+
+	@description ^= :$: <br><color="green">RCS can accept other fuels.</color>
 
 	MODULE
 	{
@@ -146,6 +147,74 @@
 				}
 			}
 	   }
+	   	 	SUBTYPE
+		{
+			name = HydrogenPeroxide
+			title = HydrogenPeroxide
+			primaryColor = LightLightBlue
+			secondaryColor = LightLightBlue
+			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
+					resourceName = HydrogenPeroxide
+					PROPELLANT
+					{
+						name = HydrogenPeroxide
+						ratio = 1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					atmosphereCurve
+					{
+						key = #0 $/IspVac$
+						key = #1 $/IspASL$
+						key = 4 0.001
+					}
+				}
+			}
+	  }
+   		 SUBTYPE
+		{
+			name = Hypergolic
+			title = Hypergolic
+			primaryColor = PurpleBrown
+			secondaryColor = SalmonPink
+			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
+					PROPELLANT
+					{
+						name = Aerozine
+						ratio = 0.9
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+         				PROPELLANT
+					{
+						name = Nitroxide
+						ratio = 1.1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					atmosphereCurve
+					{
+						key = #0 $/IspVacHyper$
+						key = #1 $/IspASLHyper$
+						key = 4 0.001
+					}
+				}
+			}
    
   }
 }
