--- a/GameData/StockalikeHypergols/Patches/RCS.cfg
+++ b/GameData/StockalikeHypergols/Patches/RCS.cfg
@@ -11,7 +11,7 @@
 	@IspVacHyper *= #$IspMult$
 	@IspASHyper *= #$IspMult$
 	
-	@MODULE[ModuleB9PartSwitch:HAS[#switcherDescription[RCS?Mode]]
+	@MODULE[ModuleB9PartSwitch]:HAS[#switcherDescription[RCS?Mode]]
 	{
 	 	SUBTYPE
 		{
@@ -44,14 +44,15 @@
 					}
 				}
 			}
-	  }
-   		 SUBTYPE
+		}
+   		
+		SUBTYPE
 		{
 			name = Hypergolic
 			title = Hypergolic
 			primaryColor = PurpleBrown
 			secondaryColor = SalmonPink
-			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			descriptionDetail = #Hypergolic<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
 			MODULE
 			{
 				IDENTIFIER
@@ -81,8 +82,10 @@
 					}
 				}
 			}
-	  }
+		}
+	}
 }
+
 @PART[*]:HAS[@MODULE[ModuleRCSFX],!MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
 	IspVac = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,0[1, ]$ // get vac Isp number
@@ -216,5 +219,6 @@
 				}
 			}
    
-  }
+		}
+	}
 }
