--- a/GameData/StockalikeHypergols/Patches/RCS.cfg
+++ b/GameData/StockalikeHypergols/Patches/RCS.cfg
@@ -1,4 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleRCSFX],MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSFX],MODULE[B9PartSwitch:HAS[#moduleID[RCS]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
 	
 	IspVacHTP = 160
