--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -21,7 +21,7 @@ B9_TANK_TYPE
 }
 B9_TANK_TYPE
 {
-	name = HydrogenPeroxide
+	name = HTP/LF
 	primaryColor = LightLightBlue
 	tankMass = 0.0004
 	tankCost = 0.9
@@ -29,7 +29,13 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = HydrogenPeroxide
-		unitsPerVolume = 3.4940601
+		unitsPerVolume = 25
+		percentFilled = 100
+	}
+	RESOURCE
+	{
+		name = LiquidFuel
+		unitsPerVolume = 1
 		percentFilled = 100
 	}
 }
@@ -84,19 +90,6 @@ B9_TANK_TYPE
 		{
 			@name = Nitroxide
 		}
-	}
-	// Not affecting tanks, but some engines have fuel onboard
-	@RESOURCE[LiquidFuel]
-	{
-		@name = Aerozine
-		@amount *= 5
-		@maxAmount *= 5
-	}
-	@RESOURCE[Oxidizer]
-	{
-		@name = Nitroxide
-		@amount *= 5
-		@maxAmount *= 5
 	}
 }
 // Template for monoprop engines
