--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -9,13 +9,34 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = Aerozine
-		unitsPerVolume = 2.25
+		unitsPerVolume = 0.9
 		percentFilled = 100
 	}
 	RESOURCE
 	{
 		name = Nitroxide
-		unitsPerVolume = 2.75
+		unitsPerVolume = 1.1
+		percentFilled = 100
+	}
+}
+B9_TANK_TYPE
+{
+	name = Ethalox
+	primaryColor = BlushPink
+	secondaryColor = ResourceColorOxidizer
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
+	RESOURCE
+	{
+		name = Ethanol
+		unitsPerVolume = 3.96
+		percentFilled = 100
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		unitsPerVolume = 1
 		percentFilled = 100
 	}
 }
@@ -23,6 +44,7 @@ B9_TANK_TYPE
 {
 	name = HTP/LF
 	primaryColor = LightLightBlue
+	secondaryColor = ResourceColorLiquidFuel
 	tankMass = 0.0004
 	tankCost = 0.9
 	percentFilled = 100
@@ -39,7 +61,7 @@ B9_TANK_TYPE
 		percentFilled = 100
 	}
 }
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:FOR[zzzMoreFuels]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
@@ -50,13 +72,13 @@ B9_TANK_TYPE
 		}
 		SUBTYPE
 		{
-			name = HydrogenPeroxide
-			tankType = HydrogenPeroxide
+			name = Peroxide/LF
+			tankType = HTP/LF
 		}
 
 	}
 }
-@PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:FOR[zzzStockalikeHypergols]:NEEDS[Bluedog_DB]
+@PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:FOR[zzzMoreFuels]:NEEDS[Bluedog_DB]
 // they have their own B9 tank types for use with their parts
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
@@ -68,18 +90,20 @@ B9_TANK_TYPE
 		}
 		SUBTYPE
 		{
-			name = HydrogenPeroxide
-			tankType = HydrogenPeroxide
+			name = Peroxide/LF
+			tankType = HTP/LF
 		}
-
+		SUBTYPE
+		{
+			name = Ethalox
+			tankType = Ethalox
+		}
 	}
 }
 
 
-// Engine and tank setup
-@PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzStockalikeHypergols]
+@PART[*]:HAS[#MFHypergolic[True]]:AFTER[zzzMoreFuels]
 {
-	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
 	@MODULE[ModuleEngine*],*
 	{
 		@PROPELLANT[LiquidFuel]
@@ -92,36 +116,25 @@ B9_TANK_TYPE
 		}
 	}
 }
-// Template for monoprop engines
-@PART[*]:HAS[#SHMonopropellant[True]]:AFTER[zzzStockalikeHypergols]
+@PART[*]:HAS[#MFEthalox[True]]:AFTER[zzzMoreFuels]
 {
-	@MODULE[ModuleEngines*],*
+	@MODULE[ModuleEngine*],*
 	{
-		@PROPELLANT:HAS[#name[MonoPropellant]]
+		@PROPELLANT[LiquidFuel]
 		{
-			@name = Aerozine
-			@ratio = 2.25
-		}
-		PROPELLANT
-		{
-			name = Nitroxide
-			ratio = 2.75
+			@name = Ethanol
+			@ratio = 3.96
 		}
 	}
-//This is missing the line that converts engines storing monoprop tagged hypergolic to the resources they burn.
-//Some engines might have it for RCS, not burning, and the only real side effect is that engines that meet those criteria
-//(especially Tantares) might have to add some fuel tanks to do that.
 }
-
-// HTP Engines (will treat them as only using HTP regardless of their historical fuels)
-@PART[*]:HAS[#SHPeroxide[True]]:AFTER[zzzStockalikeHypergols]
+@PART[*]:HAS[#MFPeroxide[True]]:AFTER[zzzMoreFuels]
 {
 	@MODULE[ModuleEngine*],*
 	{
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = HydrogenPeroxide
+			@ratio = 25
 		}
-		!PROPELLANT[Oxidizer] { }
 	}
 }
