--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -116,6 +116,23 @@ B9_TANK_TYPE
 		}
 	}
 }
+@PART[*]:HAS[#MFMonoHyper[True]]:AFTER[zzzMoreFuels]
+{
+	@MODULE[ModuleEngine*],*
+	{
+		@PROPELLANT[Monopropellant]
+		{
+			@name = Aerozine
+			ratio = 1.1
+		}
+		PROPELLANT
+		{
+			name = Nitroxide
+			ratio = 0.9
+		}
+	}
+}
+// monoprop -> hypergolic is the only switch of that manner that I think might happen. Individual exceptions will be dealt with individully.
 @PART[*]:HAS[#MFEthalox[True]]:AFTER[zzzMoreFuels]
 {
 	@MODULE[ModuleEngine*],*
