--- a/GameData/StockalikeHypergols/RCS.cfg
+++ b/GameData/StockalikeHypergols/RCS.cfg
@@ -1,92 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleRCSFX],MODULE[B9PartSwitch:HAS[#moduleID[RCS]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
-{
-	
-	IspVacHTP = 160
-	IspASLHTP = 120
-	@IspVacHTP *= #$IspMult$
-	@IspASHTP *= #$IspMult$
-  
-  	IspVacHyper = 290
-	IspASLHyper = 180
-	@IspVacHyper *= #$IspMult$
-	@IspASHyper *= #$IspMult$
-	
-	@MODULE[ModuleB9PartSwitch]:HAS[#switcherDescription[RCS?Mode]]
-	{
-	 	SUBTYPE
-		{
-			name = HydrogenPeroxide
-			title = HydrogenPeroxide
-			primaryColor = LightLightBlue
-			secondaryColor = LightLightBlue
-			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
-			MODULE
-			{
-				IDENTIFIER
-				{
-					name = ModuleRCSFX
-				}
-				DATA
-				{
-					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
-					resourceName = HydrogenPeroxide
-					PROPELLANT
-					{
-						name = HydrogenPeroxide
-						ratio = 1
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-					atmosphereCurve
-					{
-						key = #0 $/IspVac$
-						key = #1 $/IspASL$
-						key = 4 0.001
-					}
-				}
-			}
-		}
-   		
-		SUBTYPE
-		{
-			name = Hypergolic
-			title = Hypergolic
-			primaryColor = PurpleBrown
-			secondaryColor = SalmonPink
-			descriptionDetail = #Hypergolic<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
-			MODULE
-			{
-				IDENTIFIER
-				{
-					name = ModuleRCSFX
-				}
-				DATA
-				{
-					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
-					PROPELLANT
-					{
-						name = Aerozine
-						ratio = 0.9
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-         				PROPELLANT
-					{
-						name = Nitroxide
-						ratio = 1.1
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-					atmosphereCurve
-					{
-						key = #0 $/IspVacHyper$
-						key = #1 $/IspASLHyper$
-						key = 4 0.001
-					}
-				}
-			}
-		}
-	}
-}
-
-@PART[*]:HAS[@MODULE[ModuleRCSFX],!MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSFX]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
 	IspVac = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,0[1, ]$ // get vac Isp number
 	IspASL = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,1[1, ]$ // get ASL Isp number
@@ -107,8 +19,18 @@
   	IspVacHyper = 290
 	IspASLHyper = 180
 	@IspVacHyper *= #$IspMult$
-	@IspASHyper *= #$IspMult$
-
+	@IspASLHyper *= #$IspMult$
+	
+	IspVacN2 = 65
+	IspASLN2 = 40
+	@IspVacN2 *= #$IspMult$
+	@IspASLN2 *= #$IspMult$
+	
+	IspVacEth = 260
+	IspASLEth = 245
+	@IspVacEth *= #$IspMult$
+	@IspASLEth *= #$IspMult$
+	
 	@description ^= :$: <br><color="green">RCS can accept other fuels.</color>
 
 	MODULE
