RCS fuel switch
Untested and basically committed by the seat of my pants (like everything in this disaster of a project).
To be refined over the next few days, as I *actually* prepare for 0.3's release.

Hopefully after that I can find takers for the standardized engines, after which we can go fully to 1.0

--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -1,6 +1,6 @@
 B9_TANK_TYPE
 {
-	name = Hypergolic
+	name = MF_Hypergolic
 	primaryColor = PurpleBrown
 	secondaryColor = SalmonPink
 	tankMass = 0.0004
@@ -21,7 +21,52 @@ B9_TANK_TYPE
 }
 B9_TANK_TYPE
 {
-	name = Ethalox
+	name = MF_Monopropellant
+	primaryColor = ResourceColorMonopropellant
+	secondaryColor = ResourceColorMonopropellant
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
+	RESOURCE
+	{
+		name = Monopropellant
+		unitsPerVolume = 1
+		percentFilled = 100
+	}
+}
+B9_TANK_TYPE
+{
+	name = MF_Nitrogen
+	primaryColor = Apricot
+	secondaryColor = Apricot
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
+	RESOURCE
+	{
+		name = Nitrogen
+		unitsPerVolume = 1
+		percentFilled = 100
+	}
+}
+B9_TANK_TYPE
+{
+	name = MF_HTP
+	primaryColor = LightLightBlue
+	secondaryColor = LightLightBlue
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
+	RESOURCE
+	{
+		name = HydrogenPeroxide
+		unitsPerVolume = 1
+		percentFilled = 100
+	}
+}
+B9_TANK_TYPE
+{
+	name = MF_Ethalox
 	primaryColor = BlushPink
 	secondaryColor = ResourceColorOxidizer
 	tankMass = 0.0004
@@ -42,7 +87,7 @@ B9_TANK_TYPE
 }
 B9_TANK_TYPE
 {
-	name = HTP/LF
+	name = MF_HTP_LF
 	primaryColor = LightLightBlue
 	secondaryColor = ResourceColorLiquidFuel
 	tankMass = 0.0004
@@ -61,6 +106,49 @@ B9_TANK_TYPE
 		percentFilled = 100
 	}
 }
+@PART[*]:HAS[@RESOURCE[Monopropellant],!MODULE[ModuleB9PartSwitch:HAS[#moduleID[fuelSwitch]]]:FOR[zzzMoreFuels]
+{
+	!RESOURCE[Monopropellant] {}
+	
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = fuelSwitch
+		switcherDescription = Fuel Switch
+		switchInFlight = False
+		baseVolume = #$../refVolume$
+		SUBTYPE
+		{
+			name = Hypergolic
+			title = Hypergolic
+			tankType = MF_Hypergolic
+		}
+		SUBTYPE
+		{
+			name = Monopropellant
+			title = Monopropellant
+			tankType = MF_Monopropellant
+		}
+		SUBTYPE
+		{
+			name = Nitrogen
+			title = Nitrogen
+			tankType = MF_Nitrogen
+		}
+		SUBTYPE
+		{
+			name = Ethalox
+			title = Ethanol/Oxidizer
+			tankType = MF_Ethalox
+		}
+		SUBTYPE
+		{
+			name = HTP
+			title = HydrogenPeroxide
+			tankType = MF_HTP
+		}
+	}
+}
 @PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:FOR[zzzMoreFuels]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
@@ -68,14 +156,21 @@ B9_TANK_TYPE
 		SUBTYPE
 		{
 			name = Hypergolic
-			tankType = Hypergolic
+			title = Hypergolic
+			tankType = MF_Hypergolic
 		}
 		SUBTYPE
 		{
-			name = Peroxide/LF
-			tankType = HTP/LF
+			name = Peroxide_LF
+			title = Peroxide/LF
+			tankType = MF_HTP_LF
 		}
-
+		SUBTYPE
+		{
+			name = Ethalox
+			title = Ethalox
+			tankType = MF_Ethalox
+		}
 	}
 }
 @PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:FOR[zzzMoreFuels]:NEEDS[Bluedog_DB]
@@ -86,17 +181,20 @@ B9_TANK_TYPE
 		SUBTYPE
 		{
 			name = Hypergolic
-			tankType = Hypergolic
+			title = Hypergolic
+			tankType = MF_Hypergolic
 		}
 		SUBTYPE
 		{
-			name = Peroxide/LF
-			tankType = HTP/LF
+			name = Peroxide_LF
+			title = Peroxide/LF
+			tankType = MF_HTP_LF
 		}
 		SUBTYPE
 		{
 			name = Ethalox
-			tankType = Ethalox
+			title = Ethalox
+			tankType = MF_Ethalox
 		}
 	}
 }
@@ -142,6 +240,10 @@ B9_TANK_TYPE
 			@name = Ethanol
 			@ratio = 3.96
 		}
+		%PROPELLANT[Oxidizer]
+		{
+			%ratio = 1
+		}
 	}
 }
 @PART[*]:HAS[#MFPeroxide[True]]:AFTER[zzzMoreFuels]
@@ -152,6 +254,10 @@ B9_TANK_TYPE
 		{
 			@name = HydrogenPeroxide
 			@ratio = 25
+		}
+		%PROPELLANT[Oxidizer]
+		{
+			%ratio = 1
 		}
 	}
 }
