--- a/GameData/StockalikeHypergols/RCS.cfg
+++ b/GameData/StockalikeHypergols/RCS.cfg
@@ -97,8 +97,8 @@
 					}
 					atmosphereCurve
 					{
-						key = #0 $/IspVac$
-						key = #1 $/IspASL$
+						key = #0 $/IspVacHTP$
+						key = #1 $/IspASLHTP$
 						key = 4 0.001
 					}
 				}
@@ -142,5 +142,73 @@
 			}
    
 		}
+		SUBTYPE
+		{
+			name = Ethalox
+			title = Ethanol-LiquidOxygen
+			primaryColor = LightLightBlue
+			secondaryColor = ResourceColorOxidizer
+			descriptionDetail = #Ethanol/LOX<br><b>Isp:</b> $/IspASLEth$ / $/IspVacEth$ s.$
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower
+					PROPELLANT
+					{
+						name = Ethanol
+						ratio = 3.96
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					PROPELLANT
+					{
+						name = Oxidizer
+						ratio = 1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					atmosphereCurve
+					{
+						key = #0 $/IspEth$
+						key = #1 $/IspEth$
+						key = 4 0.001
+					}
+				}
+			}
+	  }
+	  SUBTYPE
+		{
+			name = Nitrogen
+			title = Nitrogen
+			primaryColor = Apricot
+			secondaryColor = Apricot
+			descriptionDetail = #Nitrogen<br><b>Isp:</b> $/IspASLN2$ / $/IspVacN2$ s.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
+					PROPELLANT
+					{
+						name = Nitrogen
+						ratio = 1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					atmosphereCurve
+					{
+						key = #0 $/IspVacN2$
+						key = #1 $/IspASLN2$
+						key = 4 0.001
+					}
+				}
+			}
+	  }
 	}
 }
+
