--- a/GameData/MoreFuels!/Patches/Mod_Support/CRE.cfg
+++ b/GameData/MoreFuels!/Patches/Mod_Support/CRE.cfg
@@ -1,8 +1,8 @@
 @PART[black_arrow_engine_s1_1|black_arrow_engine_s1_2|black_arrow_engine_s1_3|black_knight_engine_s1_1|blue_steel_engine_s1_1]:FIRST:NEEDS[CRE]
 {
-  %SHPeroxide = True
+  %MF_HTP_LF = True
 }
 @PART[blue_streak_engine_s1_3]:FIRST:NEEDS[CRE]
 {
-  %SHHypergolic = True
+  %MF_Hypergolic = True
 }
