--- a/GameData/MoreFuels!/Patches/Mod_Support/ReStock+.cfg
+++ b/GameData/MoreFuels!/Patches/Mod_Support/ReStock+.cfg
@@ -1,8 +1,8 @@
 @PART[restock-engine-125-pug]:FIRST:NEEDS[RestockPlus]
 {
-  %SHHypergolic = True
+  %MF_Hypergolic = True
 }
 @PART[restock-engine-schnauzer-1]:FIRST:NEEDS[RestockPlus&!SquadExpansion/MakingHistory]
 {
-  %SHHypergolic = True
+  %MF_Hypergolic = True
 }
