--- a/GameData/MoreFuels!/Patches/RCS.cfg
+++ b/GameData/MoreFuels!/Patches/RCS.cfg
@@ -1,4 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleRCSFX]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSFX]:HAS[#resourceName[MonoPropellant]]]:NEEDS[B9PartSwitch]:FOR[zzzMoreFuels]
 {
 	IspVac = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,0[1, ]$ // get vac Isp number
 	IspASL = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,1[1, ]$ // get ASL Isp number
@@ -14,7 +14,7 @@
   	IspVacHTP = 160
 	IspASLHTP = 120
 	@IspVacHTP *= #$IspMult$
-	@IspASHTP *= #$IspMult$
+	@IspASLHTP *= #$IspMult$
   
   	IspVacHyper = 290
 	IspASLHyper = 180
@@ -39,7 +39,7 @@
 		moduleID = RCS
 		switcherDescription = RCS Mode
 		switcherDescriptionPlural = RCS Modes
-		switchInFlight = True
+		switchInFlight = False
 		SUBTYPE
 		{
 			name = MonoPropellant
@@ -110,7 +110,7 @@
 			title = Hypergolic
 			primaryColor = PurpleBrown
 			secondaryColor = SalmonPink
-			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			descriptionDetail = #Hypergolic<br><b>Isp:</b> $/IspASLHyper$ / $/IspVacHyper$ s.
 			MODULE
 			{
 				IDENTIFIER
@@ -146,9 +146,9 @@
 		{
 			name = Ethalox
 			title = Ethanol-LiquidOxygen
-			primaryColor = LightLightBlue
+			primaryColor = BlushPink
 			secondaryColor = ResourceColorOxidizer
-			descriptionDetail = #Ethanol/LOX<br><b>Isp:</b> $/IspASLEth$ / $/IspVacEth$ s.$
+			descriptionDetail = #Ethanol/LOX<br><b>Isp:</b> $/IspASLEth$ / $/IspVacEth$ s.
 			MODULE
 			{
 				IDENTIFIER
@@ -161,7 +161,7 @@
 					PROPELLANT
 					{
 						name = Ethanol
-						ratio = 3.96
+						ratio = 19.1
 						resourceFlowMode = STAGE_PRIORITY_FLOW
 					}
 					PROPELLANT
@@ -171,13 +171,14 @@
 						resourceFlowMode = STAGE_PRIORITY_FLOW
 					atmosphereCurve
 					{
-						key = #0 $/IspEth$
-						key = #1 $/IspEth$
+						key = #0 $/IspVacEth$
+						key = #1 $/IspASLEth$
 						key = 4 0.001
 					}
 				}
 			}
-	  }
+			}
+		}
 	  SUBTYPE
 		{
 			name = Nitrogen
@@ -211,4 +212,3 @@
 	  }
 	}
 }
-
