--- a/GameData/MoreFuels!/Patches/setup.cfg
+++ b/GameData/MoreFuels!/Patches/setup.cfg
@@ -9,28 +9,28 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = Aerozine
-		unitsPerVolume = 0.9
+		unitsPerVolume = 2.25
 		percentFilled = 100
 	}
 	RESOURCE
 	{
 		name = Nitroxide
-		unitsPerVolume = 1.1
+		unitsPerVolume = 2.75
 		percentFilled = 100
 	}
 }
 B9_TANK_TYPE
 {
 	name = MF_Monopropellant
-	primaryColor = ResourceColorMonopropellant
-	secondaryColor = ResourceColorMonopropellant
+	primaryColor = ResourceColorMonoPropellant
+	secondaryColor = ResourceColorMonoPropellant
 	tankMass = 0.0004
 	tankCost = 0.9
 	percentFilled = 100
 	RESOURCE
 	{
-		name = Monopropellant
-		unitsPerVolume = 1
+		name = MonoPropellant
+		unitsPerVolume = 1.5
 		percentFilled = 100
 	}
 }
@@ -45,7 +45,7 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = Nitrogen
-		unitsPerVolume = 1
+		unitsPerVolume = 180
 		percentFilled = 100
 	}
 }
@@ -75,7 +75,7 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = Ethanol
-		unitsPerVolume = 3.96
+		unitsPerVolume = 19.1
 		percentFilled = 100
 	}
 	RESOURCE
@@ -96,7 +96,7 @@ B9_TANK_TYPE
 	RESOURCE
 	{
 		name = HydrogenPeroxide
-		unitsPerVolume = 25
+		unitsPerVolume = 28.651
 		percentFilled = 100
 	}
 	RESOURCE
@@ -106,50 +106,7 @@ B9_TANK_TYPE
 		percentFilled = 100
 	}
 }
-@PART[*]:HAS[@RESOURCE[Monopropellant],!MODULE[ModuleB9PartSwitch:HAS[#moduleID[fuelSwitch]]]:FOR[zzzMoreFuels]
-{
-	!RESOURCE[Monopropellant] {}
-	
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = fuelSwitch
-		switcherDescription = Fuel Switch
-		switchInFlight = False
-		baseVolume = #$../refVolume$
-		SUBTYPE
-		{
-			name = Hypergolic
-			title = Hypergolic
-			tankType = MF_Hypergolic
-		}
-		SUBTYPE
-		{
-			name = Monopropellant
-			title = Monopropellant
-			tankType = MF_Monopropellant
-		}
-		SUBTYPE
-		{
-			name = Nitrogen
-			title = Nitrogen
-			tankType = MF_Nitrogen
-		}
-		SUBTYPE
-		{
-			name = Ethalox
-			title = Ethanol/Oxidizer
-			tankType = MF_Ethalox
-		}
-		SUBTYPE
-		{
-			name = HTP
-			title = HydrogenPeroxide
-			tankType = MF_HTP
-		}
-	}
-}
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:FOR[zzzMoreFuels]
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:FOR[zzzMoreFuels]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
@@ -161,14 +118,14 @@ B9_TANK_TYPE
 		}
 		SUBTYPE
 		{
-			name = Peroxide_LF
-			title = Peroxide/LF
+			name = Peroxide/Kerosene
+			title = Peroxide/Kerosene
 			tankType = MF_HTP_LF
 		}
 		SUBTYPE
 		{
 			name = Ethalox
-			title = Ethalox
+			title = Ethanol/LqdOxygen
 			tankType = MF_Ethalox
 		}
 	}
@@ -186,78 +143,78 @@ B9_TANK_TYPE
 		}
 		SUBTYPE
 		{
-			name = Peroxide_LF
-			title = Peroxide/LF
+			name = Peroxide/Kerosene
+			title = Peroxide/Kerosene
 			tankType = MF_HTP_LF
 		}
 		SUBTYPE
 		{
 			name = Ethalox
-			title = Ethalox
+			title = Ethanol/LqdOxygen
 			tankType = MF_Ethalox
 		}
 	}
 }
 
 
-@PART[*]:HAS[#MFHypergolic[True]]:AFTER[zzzMoreFuels]
+@PART[*]:HAS[#MF_Hypergolic[True]]:AFTER[zzzMoreFuels]
 {
 	@MODULE[ModuleEngine*],*
 	{
-		@PROPELLANT[LiquidFuel]
+		!PROPELLANT[*] {}
+		!PROPELLANT[*] {}
+		
+		PROPELLANT
 		{
-			@name = Aerozine
-		}
-		@PROPELLANT[Oxidizer]
-		{
-			@name = Nitroxide
-		}
-	}
-}
-@PART[*]:HAS[#MFMonoHyper[True]]:AFTER[zzzMoreFuels]
-{
-	@MODULE[ModuleEngine*],*
-	{
-		@PROPELLANT[Monopropellant]
-		{
-			@name = Aerozine
-			ratio = 1.1
+			name = Aerozine
+			ratio = 0.9
+			DrawGauge = True
 		}
 		PROPELLANT
 		{
 			name = Nitroxide
-			ratio = 0.9
+			ratio = 1.1
 		}
 	}
 }
-// monoprop -> hypergolic is the only switch of that manner that I think might happen. Individual exceptions will be dealt with individully.
-@PART[*]:HAS[#MFEthalox[True]]:AFTER[zzzMoreFuels]
+@PART[*]:HAS[#MF_Ethalox[True]]:AFTER[zzzMoreFuels]
 {
 	@MODULE[ModuleEngine*],*
 	{
-		@PROPELLANT[LiquidFuel]
+		!PROPELLANT[*] {}
+		!PROPELLANT[*] {}
+		
+		PROPELLANT
 		{
-			@name = Ethanol
-			@ratio = 3.96
+			name = Ethanol
+			ratio = 19.1
+			DrawGauge = True
 		}
-		%PROPELLANT[Oxidizer]
+		PROPELLANT
 		{
-			%ratio = 1
+			name = Oxidizer
+			ratio = 1
 		}
 	}
 }
-@PART[*]:HAS[#MFPeroxide[True]]:AFTER[zzzMoreFuels]
+@PART[*]:HAS[#MF_HTP[True]]:AFTER[zzzMoreFuels]
 {
 	@MODULE[ModuleEngine*],*
 	{
-		@PROPELLANT[LiquidFuel]
+		!PROPELLANT[*] {}
+		!PROPELLANT[*] {}
+		
+		PROPELLANT
 		{
-			@name = HydrogenPeroxide
-			@ratio = 25
+			name = HydrogenPeroxide
+			ratio = 28.651
+			DrawGauge = True
 		}
-		%PROPELLANT[Oxidizer]
+		PROPELLANT
 		{
-			%ratio = 1
+			name = LiquidFuel
+			ratio = 1
+			DrawGauge = True
 		}
 	}
 }
