--- a/GameData/MoreFuels!/Patches/Mod_Support/Bluedog.cfg
+++ b/GameData/MoreFuels!/Patches/Mod_Support/Bluedog.cfg
@@ -6,45 +6,45 @@
 //Able(star)
 @PART[bluedog_able*|bluedog_Able*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 // Agena
 @PART[bluedog_Agena*,bluedog_agena*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 
 // Apollo
 @PART[bluedog_Apollo*,bluedog_LEM*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 
 // Delta
 @PART[bluedog_DeltaK*|bluedog_AJ10*|bluedog_TR_201]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 
 //Gemini
 @PART[bluedog_Gemini_Lander*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 // Juno/Jupiter
 @PART[bluedog_Juno*|bluedog_Jupiter*|bluedog_Redstone*]:HAS[#name[!bluedog_Jupiter_Vernier]]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 //LDC
 @PART[bluedog_LDC_S1*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 // Titan
 @PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier|bluedog_LR87_11_Single|bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*|bluedog_Titan_Transtage]:FIRST:NEEDS[Bluedog_DB]
 {
-	%SHHypergolic = True
+	%MF_Hypergolic = True
 }
 
 
@@ -94,11 +94,11 @@
 	{
 		@SUBTYPE:HAS[#name[Transtage]]
 		{
-			@tankType = Hypergolic
+			@tankType = MF_Hypergolic
 		}
 		@SUBTYPE:HAS[#name[Transtage-34D]]
 		{
-			@tankType = Hypergolic
+			@tankType = MF_Hypergolic
 		}
 	}
 }
