--- a/GameData/MoreFuels!/Patches/Mod_Support/knes.cfg
+++ b/GameData/MoreFuels!/Patches/Mod_Support/knes.cfg
@@ -1,8 +1,4 @@
 @PART[Knes_Engine_EPS|_Knes_Cora_Engine_1|_Knes_Cora_Engine_SL|_Knes_Diamant_Aileron_B|_Knes_Diamant_Engine_09375|_Knes_Diane_Engine_125|_Knes_Vesta_Engine_0625|_Knes_L3S_L140|_Knes_L3S_L220|_Knes_L3S_L220N|_Knes_L3S_L33_Engine|_Knes_L3S_PAL|_Knes_Mireille_Engine_09375|_Knes_Veronique_Engine_03125]:FIRST:NEEDS[Knes]
 {
-  %SHHypergolic = True
-}
-@PART[Knes_Hermes_Engine_Mk91|Knes_Service_Module_Viking_09375]:FIRST:NEEDS[Knes]
-{
-  %SHMonopropellant = True
+  %MF_Hypergolic = True
 }
